# llmapi-rust

./: Cargo.toml  README.md  install-service.ps1  manage-service.ps1
.github/workflows/: build_and_deploy.yml
src/: config.rs  main.rs
src/.github/workflows/: build_and_release.yml
src/llms/: anthropic.rs  mod.rs  model_collection.rs  openai.rs
src/modes/: api.rs  chat.rs  mod.rs  service.rs
