[package]
name = "llm-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
dirs = "5.0"
